--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    <canvas id="bg"></canvas>
+    <canvas id="bg" ></canvas>
+    <video id="video" playsinline controls loop autoplay="true" width="320" height="240" src="./assets/video/video.mp4" style="display: none;"></video>
 
     <script type="module" src="/main.js"></script>
   </body>
